EXP5/parse_ljx_mogai.output
Terminals unused in grammar

   LF
   LOWER_THAN_ELSE


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: %empty
   15       | ID

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP

   21 VarList: ParamDec COMMA VarList
   22        | ParamDec

   23 ParamDec: Specifier VarDec

   24 CompSt: LC DefList StmtList RC

   25 StmtList: Stmt StmtList
   26         | %empty

   27 Stmt: Exp SEMI
   28     | CompSt
   29     | RETURN Exp SEMI
   30     | IF LP Exp RP Stmt
   31     | IF LP Exp RP Stmt ELSE Stmt
   32     | WHILE LP Exp RP Stmt
   33     | Exp error

   34 DefList: Def DefList
   35        | %empty

   36 Def: Specifier DecList SEMI
   37    | error DecList SEMI

   38 DecList: Dec
   39        | Dec COMMA DecList

   40 Dec: VarDec
   41    | VarDec ASSIGNOP Exp

   42 Exp: Exp ASSIGNOP Exp
   43    | Exp AND Exp
   44    | Exp OR Exp
   45    | Exp RELOP Exp
   46    | Exp PLUS Exp
   47    | Exp MINUS Exp
   48    | Exp STAR Exp
   49    | Exp DIV Exp
   50    | LP Exp RP
   51    | MINUS Exp
   52    | NOT Exp
   53    | IO LP Args RP
   54    | ID LP Args RP
   55    | IO LP RP
   56    | ID LP RP
   57    | Exp LB Exp RB
   58    | Exp DOT ID
   59    | ID
   60    | INT
   61    | FLOAT
   62    | LP error RP
   63    | ID LP error RP
   64    | Exp LB error RB
   65    | Exp ASSIGNOP error

   66 Args: Exp COMMA Args
   67     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 33 37 62 63 64 65
INT (258) 18 60
FLOAT (259) 61
TYPE (260) 10
LF (261)
ID (262) 15 16 17 19 20 54 56 58 59 63
SEMI (263) 4 5 7 27 29 36 37
COMMA (264) 9 21 39 66
DOT (265) 58
ASSIGNOP (266) 41 42 65
RELOP (267) 45
PLUS (268) 46
MINUS (269) 47 51
STAR (270) 48
DIV (271) 49
AND (272) 43
OR (273) 44
NOT (274) 52
LP (275) 19 20 30 31 32 50 53 54 55 56 62 63
RP (276) 19 20 30 31 32 50 53 54 55 56 62 63
LB (277) 18 57 64
RB (278) 18 57 64
LC (279) 12 24
RC (280) 12 24
STRUCT (281) 12 13
RETURN (282) 29
IF (283) 30 31
ELSE (284) 31
WHILE (285) 32
IO (286) 53 55
LOWER_THAN_ELSE (287)


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
Program (34)
    on left: 1, on right: 0
ExtDefList (35)
    on left: 2 3, on right: 1 3
ExtDef (36)
    on left: 4 5 6 7, on right: 3
ExtDecList (37)
    on left: 8 9, on right: 4 9
Specifier (38)
    on left: 10 11, on right: 4 5 6 7 23 36
StructSpecifier (39)
    on left: 12 13, on right: 11
OptTag (40)
    on left: 14 15, on right: 12
Tag (41)
    on left: 16, on right: 13
VarDec (42)
    on left: 17 18, on right: 8 9 18 23 40 41
FunDec (43)
    on left: 19 20, on right: 6 7
VarList (44)
    on left: 21 22, on right: 19 21
ParamDec (45)
    on left: 23, on right: 21 22
CompSt (46)
    on left: 24, on right: 6 28
StmtList (47)
    on left: 25 26, on right: 24 25
Stmt (48)
    on left: 27 28 29 30 31 32 33, on right: 25 30 31 32
DefList (49)
    on left: 34 35, on right: 12 24 34
Def (50)
    on left: 36 37, on right: 34
DecList (51)
    on left: 38 39, on right: 36 37 39
Dec (52)
    on left: 40 41, on right: 38 39
Exp (53)
    on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
    60 61 62 63 64 65, on right: 27 29 30 31 32 33 41 42 43 44 45 46
    47 48 49 50 51 52 57 58 64 65 66 67
Args (54)
    on left: 66 67, on right: 53 54 66


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 14 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    3 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI

    ID    shift, and go to state 13
    SEMI  shift, and go to state 14

    ExtDecList  go to state 15
    VarDec      go to state 16
    FunDec      go to state 17


State 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 8

   15 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 16 (Tag)


State 9

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 18


State 10

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 13

   17 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP

    LP  shift, and go to state 19

    $default  reduce using rule 17 (VarDec)


State 14

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 15

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 20


State 16

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 8 (ExtDecList)


State 17

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    SEMI  shift, and go to state 23
    LC    shift, and go to state 24

    CompSt  go to state 25


State 18

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 26
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    RC  reduce using rule 35 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 28
    Def              go to state 29


State 19

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 30
    STRUCT  shift, and go to state 2

    Specifier        go to state 31
    StructSpecifier  go to state 7
    VarList          go to state 32
    ParamDec         go to state 33


State 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 34

    ExtDecList  go to state 35
    VarDec      go to state 16


State 22

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 36


State 23

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 24

   24 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 26
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    INT     reduce using rule 35 (DefList)
    FLOAT   reduce using rule 35 (DefList)
    ID      reduce using rule 35 (DefList)
    MINUS   reduce using rule 35 (DefList)
    NOT     reduce using rule 35 (DefList)
    LP      reduce using rule 35 (DefList)
    LC      reduce using rule 35 (DefList)
    RC      reduce using rule 35 (DefList)
    RETURN  reduce using rule 35 (DefList)
    IF      reduce using rule 35 (DefList)
    WHILE   reduce using rule 35 (DefList)
    IO      reduce using rule 35 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 37
    Def              go to state 29


State 25

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 26

   37 Def: error . DecList SEMI

    ID  shift, and go to state 34

    VarDec   go to state 38
    DecList  go to state 39
    Dec      go to state 40


State 27

   36 Def: Specifier . DecList SEMI

    ID  shift, and go to state 34

    VarDec   go to state 38
    DecList  go to state 41
    Dec      go to state 40


State 28

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 42


State 29

   34 DefList: Def . DefList

    error   shift, and go to state 26
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    INT     reduce using rule 35 (DefList)
    FLOAT   reduce using rule 35 (DefList)
    ID      reduce using rule 35 (DefList)
    MINUS   reduce using rule 35 (DefList)
    NOT     reduce using rule 35 (DefList)
    LP      reduce using rule 35 (DefList)
    LC      reduce using rule 35 (DefList)
    RC      reduce using rule 35 (DefList)
    RETURN  reduce using rule 35 (DefList)
    IF      reduce using rule 35 (DefList)
    WHILE   reduce using rule 35 (DefList)
    IO      reduce using rule 35 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 43
    Def              go to state 29


State 30

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 31

   23 ParamDec: Specifier . VarDec

    ID  shift, and go to state 34

    VarDec  go to state 44


State 32

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 45


State 33

   21 VarList: ParamDec . COMMA VarList
   22        | ParamDec .

    COMMA  shift, and go to state 46

    $default  reduce using rule 22 (VarList)


State 34

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 35

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 36

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 47


State 37

   24 CompSt: LC DefList . StmtList RC

    INT     shift, and go to state 48
    FLOAT   shift, and go to state 49
    ID      shift, and go to state 50
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53
    LC      shift, and go to state 24
    RETURN  shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56
    IO      shift, and go to state 57

    $default  reduce using rule 26 (StmtList)

    CompSt    go to state 58
    StmtList  go to state 59
    Stmt      go to state 60
    Exp       go to state 61


State 38

   18 VarDec: VarDec . LB INT RB
   40 Dec: VarDec .
   41    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 62
    LB        shift, and go to state 22

    $default  reduce using rule 40 (Dec)


State 39

   37 Def: error DecList . SEMI

    SEMI  shift, and go to state 63


State 40

   38 DecList: Dec .
   39        | Dec . COMMA DecList

    COMMA  shift, and go to state 64

    $default  reduce using rule 38 (DecList)


State 41

   36 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 65


State 42

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 43

   34 DefList: Def DefList .

    $default  reduce using rule 34 (DefList)


State 44

   18 VarDec: VarDec . LB INT RB
   23 ParamDec: Specifier VarDec .

    LB  shift, and go to state 22

    $default  reduce using rule 23 (ParamDec)


State 45

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 46

   21 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 31
    StructSpecifier  go to state 7
    VarList          go to state 66
    ParamDec         go to state 33


State 47

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 48

   60 Exp: INT .

    $default  reduce using rule 60 (Exp)


State 49

   61 Exp: FLOAT .

    $default  reduce using rule 61 (Exp)


State 50

   54 Exp: ID . LP Args RP
   56    | ID . LP RP
   59    | ID .
   63    | ID . LP error RP

    LP  shift, and go to state 67

    $default  reduce using rule 59 (Exp)


State 51

   51 Exp: MINUS . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    IO     shift, and go to state 57

    Exp  go to state 68


State 52

   52 Exp: NOT . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    IO     shift, and go to state 57

    Exp  go to state 69


State 53

   50 Exp: LP . Exp RP
   62    | LP . error RP

    error  shift, and go to state 70
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    IO     shift, and go to state 57

    Exp  go to state 71


State 54

   29 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    IO     shift, and go to state 57

    Exp  go to state 72


State 55

   30 Stmt: IF . LP Exp RP Stmt
   31     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 73


State 56

   32 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 74


State 57

   53 Exp: IO . LP Args RP
   55    | IO . LP RP

    LP  shift, and go to state 75


State 58

   28 Stmt: CompSt .

    $default  reduce using rule 28 (Stmt)


State 59

   24 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 76


State 60

   25 StmtList: Stmt . StmtList

    INT     shift, and go to state 48
    FLOAT   shift, and go to state 49
    ID      shift, and go to state 50
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53
    LC      shift, and go to state 24
    RETURN  shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56
    IO      shift, and go to state 57

    $default  reduce using rule 26 (StmtList)

    CompSt    go to state 58
    StmtList  go to state 77
    Stmt      go to state 60
    Exp       go to state 61


State 61

   27 Stmt: Exp . SEMI
   33     | Exp . error
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID
   64    | Exp . LB error RB
   65    | Exp . ASSIGNOP error

    error     shift, and go to state 78
    SEMI      shift, and go to state 79
    DOT       shift, and go to state 80
    ASSIGNOP  shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    LB        shift, and go to state 89


State 62

   41 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    IO     shift, and go to state 57

    Exp  go to state 90


State 63

   37 Def: error DecList SEMI .

    $default  reduce using rule 37 (Def)


State 64

   39 DecList: Dec COMMA . DecList

    ID  shift, and go to state 34

    VarDec   go to state 38
    DecList  go to state 91
    Dec      go to state 40


State 65

   36 Def: Specifier DecList SEMI .

    $default  reduce using rule 36 (Def)


State 66

   21 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 21 (VarList)


State 67

   54 Exp: ID LP . Args RP
   56    | ID LP . RP
   63    | ID LP . error RP

    error  shift, and go to state 92
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    RP     shift, and go to state 93
    IO     shift, and go to state 57

    Exp   go to state 94
    Args  go to state 95


State 68

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   51    | MINUS Exp .
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID
   64    | Exp . LB error RB
   65    | Exp . ASSIGNOP error

    DOT   shift, and go to state 80
    STAR  shift, and go to state 85
    DIV   shift, and go to state 86
    LB    shift, and go to state 89

    $default  reduce using rule 51 (Exp)


State 69
